--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "@typegoose/typegoose": "^12.19.0",
     "astro": "^5.13.0",
-    "mongoose": "^8.18.0"
-
+    "mongoose": "^8.18.0",
     "@astrojs/react": "^4.3.0",
     "@heroui/button": "^2.2.25",
     "@heroui/checkbox": "^2.3.25",
@@ -23,7 +22,6 @@
     "@tailwindcss/vite": "^4.1.12",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
-    "astro": "^5.13.0",
     "framer-motion": "12.23.12",
     "react": "19.1.1",
     "react-dom": "19.1.1",
