--- a/package.json
+++ b/package.json
@@ -9,9 +9,6 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@typegoose/typegoose": "^12.19.0",
-    "astro": "^5.13.0",
-    "mongoose": "^8.18.0",
     "@astrojs/react": "^4.3.0",
     "@heroui/button": "^2.2.25",
     "@heroui/checkbox": "^2.3.25",
@@ -20,9 +17,14 @@
     "@heroui/system": "2.4.21",
     "@heroui/theme": "2.4.21",
     "@tailwindcss/vite": "^4.1.12",
+    "@typegoose/typegoose": "^12.19.0",
+    "@types/bcryptjs": "^3.0.0",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
+    "astro": "^5.13.0",
+    "bcryptjs": "^3.0.2",
     "framer-motion": "12.23.12",
+    "mongoose": "^8.18.0",
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "recharts": "^3.1.2",
