--- a/package.json
+++ b/package.json
@@ -10,20 +10,22 @@
   },
   "dependencies": {
     "@astrojs/react": "^4.3.0",
+    "@heroui/accordion": "^2.2.23",
     "@heroui/button": "^2.2.25",
     "@heroui/checkbox": "^2.3.25",
     "@heroui/input": "^2.4.26",
+    "@heroui/listbox": "^2.3.25",
     "@heroui/react": "^2.8.3",
     "@heroui/system": "2.4.21",
     "@heroui/theme": "2.4.21",
     "@tailwindcss/vite": "^4.1.12",
     "@typegoose/typegoose": "^12.19.0",
-    "@types/bcryptjs": "^3.0.0",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
     "astro": "^5.13.0",
     "bcryptjs": "^3.0.2",
     "framer-motion": "12.23.12",
+    "lucide-react": "^0.544.0",
     "mongoose": "^8.18.0",
     "react": "19.1.1",
     "react-dom": "19.1.1",
