--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/node": "^9.4.3",
     "@astrojs/react": "^4.3.0",
     "@heroui/accordion": "^2.2.23",
     "@heroui/button": "^2.2.25",
@@ -20,11 +21,13 @@
     "@heroui/theme": "2.4.21",
     "@tailwindcss/vite": "^4.1.12",
     "@typegoose/typegoose": "^12.19.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
     "astro": "^5.13.0",
     "bcryptjs": "^3.0.2",
     "framer-motion": "12.23.12",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.544.0",
     "mongoose": "^8.18.0",
     "react": "19.1.1",
