--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.544.0",
     "mongoose": "^8.18.0",
+    "node-fetch": "^3.3.2",
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "react-router-dom": "^7.9.1",
