--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "19.1.1",
     "react-router-dom": "^7.9.1",
     "recharts": "^3.1.2",
+    "reflect-metadata": "^0.2.2",
     "tailwindcss": "4.1.12",
     "zustand": "^5.0.8"
   }
